# aws-ssm-secrets-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  lint.yml  python-package.yml  python-publish.yml  release.yml  sonar.yml  tests.yml
aws_secrets/: __init__.py  cli.py  yaml.py
aws_secrets/cli/: cli.py  decrypt.py  deploy.py  encrypt.py  migrate.py  set_parameter.py  set_secret.py  version.py  view_parameter.py  view_secret.py
aws_secrets/config/: config_reader.py
aws_secrets/config/providers/: __init__.py
aws_secrets/config/providers/secretsmanager/: entry.py  provider.py
aws_secrets/config/providers/ssm/: entry.py  provider.py
aws_secrets/helpers/: catch_exceptions.py  logging.py
aws_secrets/miscellaneous/: cloudformation.py  crypto.py  kms.py  prompt.py  secrets.py  session.py  ssm.py  utils.py
aws_secrets/representers/: literal.py
aws_secrets/resolvers/: __init__.py  deploy_resolver.py  migrate_resolver.py  set_parameter_resolver.py  set_secret_resolver.py  view_parameter_resolver.py
aws_secrets/tags/: __init__.py  cmd.py  file.py  output_stack.py
requirements/: dev.txt  prod.txt
tests/: conftest.py
tests/cli/: test_decrypt.py  test_deploy.py  test_encrypt.py  test_set_parameter.py  test_set_secret.py  test_version.py  test_view_parameter.py  test_view_secret.py
tests/config/: test_config_reader.py
tests/config/providers/secretsmanager/: test_entry.py  test_provider.py
tests/config/providers/ssm/: test_entry.py  test_provider.py
tests/fixtures/: aws.py  click.py
tests/helpers/: test_catch_exceptions.py  test_logging.py
tests/miscellaneous/: test_cloudformation.py  test_crypto.py  test_kms.py  test_session.py  test_utils.py
tests/representers/: test_literal.py
tests/tags/: test_cmd.py  test_file.py  test_output_stack.py
