[tool.coverage.run]
branch = true
source = ["aws_secrets"]

[tool.coverage.report]
exclude_lines = []
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'coverage/html' --cov-report xml:'coverage/coverage.xml'"

[tool.poetry]
name = "aws-ssm-secrets-cli"
version = "2.2.0"
description = "AWS Secret CLI for manage SSM SecureString and SecretsManager"
license = "MIT"
authors = ["Lucas Vieira <lucas.vieira94@outlook.com>"]
maintainers = ["Lucas Vieira <lucas.vieira94@outlook.com>"]
readme = "README.md"
repository = "https://github.com/lucasvieirasilva/aws-ssm-secrets-cli"
keywords = ['AWS', 'SECRETS', 'SSM', 'MANAGER']
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[[tool.poetry.packages]]
include = "aws_secrets"

[tool.poetry.scripts]
aws-secrets = "aws_secrets.cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.3"
click = "^7.0"
PyYaml = "^6.0.1"
jsonschema = "^3.2.0"
aws-encryption-sdk = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyfakefs = "^4.5.6"
flake8 = "^4.0.1"
autopep8 = "^1.5.7"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"
